# CV-1

./: CMakeLists.txt
src/: color.cpp  faceDetect.cpp  faceDetect.h  filter.cpp  imgDisplay.cpp  vidDisplay.cpp
